objects/Freight_Cost__c/Freight_Cost__c.object-meta.xml
<CustomObject>
    <label>Freight Cost</label>
    <nameField>
        <displayFormat>FCI-{0000000}</displayFormat>
        <label>Freight Cost ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freight Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>