objects/Freight_Cost__c/fields/Freight_Cost_Percent__c.field-meta.xml
<CustomField>
    <fullName>Freight_Cost_Percent__c</fullName>
    <label>Freight Cost Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>