objects/Freight_Cost__c/fields/Freight_Type__c.field-meta.xml
<CustomField>
    <fullName>Freight_Type__c</fullName>
    <label>Freight Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Freight_Type</valueSetName>
    </valueSet>
</CustomField>