objects/Freight_Cost__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>Freight_Type__c</columns>
    <columns>Freight_Cost_Percent__c</columns>
    <columns>Start_date__c</columns>
    <columns>End_date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>